Sintactico/y.output
   0  $accept : programa $end

   1  programa : '{' componentes_programa '}'
   2           | '{' componentes_programa
   3           | componentes_programa '}'
   4           | componentes_programa

   5  componentes_programa : declaracion
   6                       | sentencia
   7                       | componentes_programa sentencia
   8                       | componentes_programa declaracion

   9  declaracion : declaracion_clase
  10              | declaracion_funcion

  11  declaracion_clase : encabezado_clase bloque_clase ','
  12                    | encabezado_clase IMPLEMENT ID bloque_clase ','
  13                    | encabezado_interface bloque_interfaz ','
  14                    | encabezado_clase bloque_clase ';'
  15                    | encabezado_clase IMPLEMENT ID bloque_clase ';'
  16                    | encabezado_interface bloque_interfaz ';'

  17  encabezado_clase : CLASS ID

  18  encabezado_interface : INTERFACE ID

  19  bloque_clase : '{' cuerpo_clase '}'
  20               | '{' cuerpo_clase herencia_clase '}'
  21               | '(' cuerpo_clase ')'
  22               | '{' '}'
  23               | '(' ')'

  24  herencia_clase : ID ','

  25  bloque_interfaz : '{' cuerpo_interfaz '}'
  26                  | '(' cuerpo_interfaz ')'
  27                  | '{' '}'
  28                  | '(' ')'

  29  cuerpo_clase : miembro_clase
  30               | cuerpo_clase miembro_clase

  31  miembro_clase : declaracion_variable
  32                | declaracion_funcion

  33  cuerpo_interfaz : declaracion_funcion_interfaz
  34                  | cuerpo_interfaz declaracion_funcion_interfaz
  35                  | declaracion_funcion
  36                  | cuerpo_interfaz declaracion_funcion

  37  declaracion_funcion_interfaz : encabezado_funcion '(' ')' ','
  38                               | encabezado_funcion '(' parametro_formal ')' ','
  39                               | encabezado_funcion '(' ')' ';'
  40                               | encabezado_funcion '(' parametro_formal ')' ';'
  41                               | encabezado_funcion parametro_formal ','
  42                               | encabezado_funcion ';'
  43                               | encabezado_funcion parametro_formal ';'

  44  declaracion_variable : tipo lista_de_id ','

  45  declaracion_funcion : encabezado_funcion '(' ')' bloque_sentencias_funcion ','
  46                      | encabezado_funcion '(' parametro_formal ')' bloque_sentencias_funcion ','
  47                      | encabezado_funcion '(' ')' bloque_sentencias_funcion
  48                      | encabezado_funcion '(' parametro_formal ')' bloque_sentencias_funcion

  49  encabezado_funcion : VOID ID

  50  parametro_formal : tipo ID

  51  bloque_sentencias_funcion : '{' lista_sentencias_funcion '}'
  52                            | '(' lista_sentencias_funcion ')'
  53                            | '{' '}'
  54                            | '(' ')'

  55  lista_sentencias_funcion : sentencia_funcion
  56                           | lista_sentencias_funcion sentencia_funcion

  57  sentencia_funcion : declaracion_funcion
  58                    | sentencia

  59  sentencia : sentencia_expresion
  60            | sentencia_seleccion
  61            | sentencia_iteracion
  62            | sentencia_imprimir
  63            | sentencia_retorno

  64  sentencia_retorno : RETURN ','
  65                    | RETURN ';'

  66  sentencia_imprimir : PRINT CADENA ','
  67                     | PRINT CADENA ';'

  68  sentencia_seleccion : condicion_if cuerpo_then END_IF ','
  69                      | condicion_if cuerpo_then cuerpo_else END_IF ','
  70                      | condicion_if cuerpo_then END_IF ';'
  71                      | condicion_if cuerpo_then cuerpo_else END_IF ';'
  72                      | condicion_if cuerpo_then ','
  73                      | condicion_if cuerpo_then cuerpo_else ','

  74  condicion_if : IF '(' comparacion ')'
  75               | IF '(' ')'

  76  cuerpo_then : sentencia
  77              | bloque_sentencias

  78  cuerpo_else : ELSE sentencia
  79              | ELSE bloque_sentencias

  80  bloque_sentencias : '{' lista_sentencias '}'
  81                    | '(' lista_sentencias ')'
  82                    | '{' '}'
  83                    | '(' ')'

  84  lista_sentencias : sentencia
  85                   | lista_sentencias sentencia

  86  comparacion : operacion comparador operacion
  87              | operacion comparador
  88              | comparador operacion
  89              | comparador

  90  comparador : '<'
  91             | '>'
  92             | "<="
  93             | ">="
  94             | "=="
  95             | "!!"
  96             | error

  97  sentencia_iteracion : inicio_do bloque_sentencias WHILE '(' comparacion ')' ','
  98                      | inicio_do bloque_sentencias WHILE '(' comparacion ')' ';'
  99                      | inicio_do bloque_sentencias WHILE '(' ')' ','

 100  inicio_do : DO

 101  sentencia_expresion : declaracion_variable
 102                      | factor_inmediato
 103                      | asignacion
 104                      | llamado_clase '(' ')' ','
 105                      | llamado_clase '(' ')' ';'
 106                      | llamado_clase '(' operacion ')' ','
 107                      | llamado_clase '(' operacion ')' ';'
 108                      | TOD '(' operacion ')' ','
 109                      | TOD '(' operacion ')' ';'

 110  llamado_clase : ID
 111                | llamado_clase '.' ID

 112  asignacion : llamado_clase '=' operacion ','
 113             | llamado_clase '=' operacion ';'
 114             | tipo llamado_clase '=' operacion ','

 115  lista_de_id : lista_de_id ';' ID
 116              | ID

 117  operacion : termino
 118            | operacion '+' termino
 119            | operacion '-' termino

 120  termino : factor
 121          | termino '*' factor
 122          | termino '/' factor

 123  factor : factor_comun
 124         | factor_inmediato

 125  factor_inmediato : llamado_clase "--"

 126  factor_comun : llamado_clase
 127               | '-' CTE_DOUBLE
 128               | CTE_DOUBLE
 129               | '-' CTE_LONG
 130               | CTE_LONG
 131               | CTE_UINT
 132               | '-' CTE_UINT

 133  tipo : DOUBLE
 134       | UINT
 135       | LONG
 136       | ID

state 0
	$accept : . programa $end  (0)

	IF  shift 1
	PRINT  shift 2
	CLASS  shift 3
	VOID  shift 4
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	DO  shift 8
	INTERFACE  shift 9
	RETURN  shift 10
	TOD  shift 11
	ID  shift 12
	'{'  shift 13
	.  error

	programa  goto 14
	componentes_programa  goto 15
	declaracion  goto 16
	sentencia  goto 17
	declaracion_clase  goto 18
	declaracion_funcion  goto 19
	encabezado_clase  goto 20
	encabezado_interface  goto 21
	declaracion_variable  goto 22
	encabezado_funcion  goto 23
	tipo  goto 24
	sentencia_expresion  goto 25
	sentencia_seleccion  goto 26
	sentencia_iteracion  goto 27
	sentencia_imprimir  goto 28
	sentencia_retorno  goto 29
	condicion_if  goto 30
	inicio_do  goto 31
	factor_inmediato  goto 32
	asignacion  goto 33
	llamado_clase  goto 34


state 1
	condicion_if : IF . '(' comparacion ')'  (74)
	condicion_if : IF . '(' ')'  (75)

	'('  shift 35
	.  error


state 2
	sentencia_imprimir : PRINT . CADENA ','  (66)
	sentencia_imprimir : PRINT . CADENA ';'  (67)

	CADENA  shift 36
	.  error


state 3
	encabezado_clase : CLASS . ID  (17)

	ID  shift 37
	.  error


state 4
	encabezado_funcion : VOID . ID  (49)

	ID  shift 38
	.  error


state 5
	tipo : LONG .  (135)

	.  reduce 135


state 6
	tipo : UINT .  (134)

	.  reduce 134


state 7
	tipo : DOUBLE .  (133)

	.  reduce 133


state 8
	inicio_do : DO .  (100)

	.  reduce 100


state 9
	encabezado_interface : INTERFACE . ID  (18)

	ID  shift 39
	.  error


state 10
	sentencia_retorno : RETURN . ','  (64)
	sentencia_retorno : RETURN . ';'  (65)

	','  shift 40
	';'  shift 41
	.  error


state 11
	sentencia_expresion : TOD . '(' operacion ')' ','  (108)
	sentencia_expresion : TOD . '(' operacion ')' ';'  (109)

	'('  shift 42
	.  error


state 12
	llamado_clase : ID .  (110)
	tipo : ID .  (136)

	ID  reduce 136
	'('  reduce 110
	'.'  reduce 110
	'='  reduce 110
	"--"  reduce 110


state 13
	programa : '{' . componentes_programa '}'  (1)
	programa : '{' . componentes_programa  (2)

	IF  shift 1
	PRINT  shift 2
	CLASS  shift 3
	VOID  shift 4
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	DO  shift 8
	INTERFACE  shift 9
	RETURN  shift 10
	TOD  shift 11
	ID  shift 12
	.  error

	componentes_programa  goto 43
	declaracion  goto 16
	sentencia  goto 17
	declaracion_clase  goto 18
	declaracion_funcion  goto 19
	encabezado_clase  goto 20
	encabezado_interface  goto 21
	declaracion_variable  goto 22
	encabezado_funcion  goto 23
	tipo  goto 24
	sentencia_expresion  goto 25
	sentencia_seleccion  goto 26
	sentencia_iteracion  goto 27
	sentencia_imprimir  goto 28
	sentencia_retorno  goto 29
	condicion_if  goto 30
	inicio_do  goto 31
	factor_inmediato  goto 32
	asignacion  goto 33
	llamado_clase  goto 34


state 14
	$accept : programa . $end  (0)

	$end  accept


state 15
	programa : componentes_programa . '}'  (3)
	programa : componentes_programa .  (4)
	componentes_programa : componentes_programa . sentencia  (7)
	componentes_programa : componentes_programa . declaracion  (8)

	IF  shift 1
	PRINT  shift 2
	CLASS  shift 3
	VOID  shift 4
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	DO  shift 8
	INTERFACE  shift 9
	RETURN  shift 10
	TOD  shift 11
	ID  shift 12
	'}'  shift 44
	$end  reduce 4

	declaracion  goto 45
	sentencia  goto 46
	declaracion_clase  goto 18
	declaracion_funcion  goto 19
	encabezado_clase  goto 20
	encabezado_interface  goto 21
	declaracion_variable  goto 22
	encabezado_funcion  goto 23
	tipo  goto 24
	sentencia_expresion  goto 25
	sentencia_seleccion  goto 26
	sentencia_iteracion  goto 27
	sentencia_imprimir  goto 28
	sentencia_retorno  goto 29
	condicion_if  goto 30
	inicio_do  goto 31
	factor_inmediato  goto 32
	asignacion  goto 33
	llamado_clase  goto 34


state 16
	componentes_programa : declaracion .  (5)

	.  reduce 5


state 17
	componentes_programa : sentencia .  (6)

	.  reduce 6


state 18
	declaracion : declaracion_clase .  (9)

	.  reduce 9


state 19
	declaracion : declaracion_funcion .  (10)

	.  reduce 10


state 20
	declaracion_clase : encabezado_clase . bloque_clase ','  (11)
	declaracion_clase : encabezado_clase . IMPLEMENT ID bloque_clase ','  (12)
	declaracion_clase : encabezado_clase . bloque_clase ';'  (14)
	declaracion_clase : encabezado_clase . IMPLEMENT ID bloque_clase ';'  (15)

	IMPLEMENT  shift 47
	'{'  shift 48
	'('  shift 49
	.  error

	bloque_clase  goto 50


state 21
	declaracion_clase : encabezado_interface . bloque_interfaz ','  (13)
	declaracion_clase : encabezado_interface . bloque_interfaz ';'  (16)

	'{'  shift 51
	'('  shift 52
	.  error

	bloque_interfaz  goto 53


state 22
	sentencia_expresion : declaracion_variable .  (101)

	.  reduce 101


state 23
	declaracion_funcion : encabezado_funcion . '(' ')' bloque_sentencias_funcion ','  (45)
	declaracion_funcion : encabezado_funcion . '(' parametro_formal ')' bloque_sentencias_funcion ','  (46)
	declaracion_funcion : encabezado_funcion . '(' ')' bloque_sentencias_funcion  (47)
	declaracion_funcion : encabezado_funcion . '(' parametro_formal ')' bloque_sentencias_funcion  (48)

	'('  shift 54
	.  error


state 24
	declaracion_variable : tipo . lista_de_id ','  (44)
	asignacion : tipo . llamado_clase '=' operacion ','  (114)

	ID  shift 55
	.  error

	lista_de_id  goto 56
	llamado_clase  goto 57


state 25
	sentencia : sentencia_expresion .  (59)

	.  reduce 59


state 26
	sentencia : sentencia_seleccion .  (60)

	.  reduce 60


state 27
	sentencia : sentencia_iteracion .  (61)

	.  reduce 61


state 28
	sentencia : sentencia_imprimir .  (62)

	.  reduce 62


state 29
	sentencia : sentencia_retorno .  (63)

	.  reduce 63


state 30
	sentencia_seleccion : condicion_if . cuerpo_then END_IF ','  (68)
	sentencia_seleccion : condicion_if . cuerpo_then cuerpo_else END_IF ','  (69)
	sentencia_seleccion : condicion_if . cuerpo_then END_IF ';'  (70)
	sentencia_seleccion : condicion_if . cuerpo_then cuerpo_else END_IF ';'  (71)
	sentencia_seleccion : condicion_if . cuerpo_then ','  (72)
	sentencia_seleccion : condicion_if . cuerpo_then cuerpo_else ','  (73)

	IF  shift 1
	PRINT  shift 2
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	DO  shift 8
	RETURN  shift 10
	TOD  shift 11
	ID  shift 12
	'{'  shift 58
	'('  shift 59
	.  error

	sentencia  goto 60
	declaracion_variable  goto 22
	tipo  goto 24
	sentencia_expresion  goto 25
	sentencia_seleccion  goto 26
	sentencia_iteracion  goto 27
	sentencia_imprimir  goto 28
	sentencia_retorno  goto 29
	condicion_if  goto 30
	cuerpo_then  goto 61
	bloque_sentencias  goto 62
	inicio_do  goto 31
	factor_inmediato  goto 32
	asignacion  goto 33
	llamado_clase  goto 34


state 31
	sentencia_iteracion : inicio_do . bloque_sentencias WHILE '(' comparacion ')' ','  (97)
	sentencia_iteracion : inicio_do . bloque_sentencias WHILE '(' comparacion ')' ';'  (98)
	sentencia_iteracion : inicio_do . bloque_sentencias WHILE '(' ')' ','  (99)

	'{'  shift 58
	'('  shift 59
	.  error

	bloque_sentencias  goto 63


state 32
	sentencia_expresion : factor_inmediato .  (102)

	.  reduce 102


state 33
	sentencia_expresion : asignacion .  (103)

	.  reduce 103


state 34
	sentencia_expresion : llamado_clase . '(' ')' ','  (104)
	sentencia_expresion : llamado_clase . '(' ')' ';'  (105)
	sentencia_expresion : llamado_clase . '(' operacion ')' ','  (106)
	sentencia_expresion : llamado_clase . '(' operacion ')' ';'  (107)
	llamado_clase : llamado_clase . '.' ID  (111)
	asignacion : llamado_clase . '=' operacion ','  (112)
	asignacion : llamado_clase . '=' operacion ';'  (113)
	factor_inmediato : llamado_clase . "--"  (125)

	'('  shift 64
	'.'  shift 65
	'='  shift 66
	"--"  shift 67
	.  error


state 35
	condicion_if : IF '(' . comparacion ')'  (74)
	condicion_if : IF '(' . ')'  (75)

	error  shift 68
	ID  shift 69
	CTE_LONG  shift 70
	CTE_UINT  shift 71
	CTE_DOUBLE  shift 72
	')'  shift 73
	'<'  shift 74
	'>'  shift 75
	"<="  shift 76
	">="  shift 77
	"=="  shift 78
	"!!"  shift 79
	'-'  shift 80
	.  error

	comparacion  goto 81
	operacion  goto 82
	comparador  goto 83
	factor_inmediato  goto 84
	llamado_clase  goto 85
	termino  goto 86
	factor  goto 87
	factor_comun  goto 88


state 36
	sentencia_imprimir : PRINT CADENA . ','  (66)
	sentencia_imprimir : PRINT CADENA . ';'  (67)

	','  shift 89
	';'  shift 90
	.  error


state 37
	encabezado_clase : CLASS ID .  (17)

	.  reduce 17


state 38
	encabezado_funcion : VOID ID .  (49)

	.  reduce 49


state 39
	encabezado_interface : INTERFACE ID .  (18)

	.  reduce 18


state 40
	sentencia_retorno : RETURN ',' .  (64)

	.  reduce 64


state 41
	sentencia_retorno : RETURN ';' .  (65)

	.  reduce 65


state 42
	sentencia_expresion : TOD '(' . operacion ')' ','  (108)
	sentencia_expresion : TOD '(' . operacion ')' ';'  (109)

	ID  shift 69
	CTE_LONG  shift 70
	CTE_UINT  shift 71
	CTE_DOUBLE  shift 72
	'-'  shift 80
	.  error

	operacion  goto 91
	factor_inmediato  goto 84
	llamado_clase  goto 85
	termino  goto 86
	factor  goto 87
	factor_comun  goto 88


state 43
	programa : '{' componentes_programa . '}'  (1)
	programa : '{' componentes_programa .  (2)
	componentes_programa : componentes_programa . sentencia  (7)
	componentes_programa : componentes_programa . declaracion  (8)

	IF  shift 1
	PRINT  shift 2
	CLASS  shift 3
	VOID  shift 4
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	DO  shift 8
	INTERFACE  shift 9
	RETURN  shift 10
	TOD  shift 11
	ID  shift 12
	'}'  shift 92
	$end  reduce 2

	declaracion  goto 45
	sentencia  goto 46
	declaracion_clase  goto 18
	declaracion_funcion  goto 19
	encabezado_clase  goto 20
	encabezado_interface  goto 21
	declaracion_variable  goto 22
	encabezado_funcion  goto 23
	tipo  goto 24
	sentencia_expresion  goto 25
	sentencia_seleccion  goto 26
	sentencia_iteracion  goto 27
	sentencia_imprimir  goto 28
	sentencia_retorno  goto 29
	condicion_if  goto 30
	inicio_do  goto 31
	factor_inmediato  goto 32
	asignacion  goto 33
	llamado_clase  goto 34


state 44
	programa : componentes_programa '}' .  (3)

	.  reduce 3


state 45
	componentes_programa : componentes_programa declaracion .  (8)

	.  reduce 8


state 46
	componentes_programa : componentes_programa sentencia .  (7)

	.  reduce 7


state 47
	declaracion_clase : encabezado_clase IMPLEMENT . ID bloque_clase ','  (12)
	declaracion_clase : encabezado_clase IMPLEMENT . ID bloque_clase ';'  (15)

	ID  shift 93
	.  error


state 48
	bloque_clase : '{' . cuerpo_clase '}'  (19)
	bloque_clase : '{' . cuerpo_clase herencia_clase '}'  (20)
	bloque_clase : '{' . '}'  (22)

	VOID  shift 4
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	ID  shift 94
	'}'  shift 95
	.  error

	declaracion_funcion  goto 96
	cuerpo_clase  goto 97
	miembro_clase  goto 98
	declaracion_variable  goto 99
	encabezado_funcion  goto 23
	tipo  goto 100


state 49
	bloque_clase : '(' . cuerpo_clase ')'  (21)
	bloque_clase : '(' . ')'  (23)

	VOID  shift 4
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	ID  shift 94
	')'  shift 101
	.  error

	declaracion_funcion  goto 96
	cuerpo_clase  goto 102
	miembro_clase  goto 98
	declaracion_variable  goto 99
	encabezado_funcion  goto 23
	tipo  goto 100


state 50
	declaracion_clase : encabezado_clase bloque_clase . ','  (11)
	declaracion_clase : encabezado_clase bloque_clase . ';'  (14)

	','  shift 103
	';'  shift 104
	.  error


state 51
	bloque_interfaz : '{' . cuerpo_interfaz '}'  (25)
	bloque_interfaz : '{' . '}'  (27)

	VOID  shift 4
	'}'  shift 105
	.  error

	declaracion_funcion  goto 106
	cuerpo_interfaz  goto 107
	declaracion_funcion_interfaz  goto 108
	encabezado_funcion  goto 109


state 52
	bloque_interfaz : '(' . cuerpo_interfaz ')'  (26)
	bloque_interfaz : '(' . ')'  (28)

	VOID  shift 4
	')'  shift 110
	.  error

	declaracion_funcion  goto 106
	cuerpo_interfaz  goto 111
	declaracion_funcion_interfaz  goto 108
	encabezado_funcion  goto 109


state 53
	declaracion_clase : encabezado_interface bloque_interfaz . ','  (13)
	declaracion_clase : encabezado_interface bloque_interfaz . ';'  (16)

	','  shift 112
	';'  shift 113
	.  error


state 54
	declaracion_funcion : encabezado_funcion '(' . ')' bloque_sentencias_funcion ','  (45)
	declaracion_funcion : encabezado_funcion '(' . parametro_formal ')' bloque_sentencias_funcion ','  (46)
	declaracion_funcion : encabezado_funcion '(' . ')' bloque_sentencias_funcion  (47)
	declaracion_funcion : encabezado_funcion '(' . parametro_formal ')' bloque_sentencias_funcion  (48)

	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	ID  shift 94
	')'  shift 114
	.  error

	parametro_formal  goto 115
	tipo  goto 116


state 55
	llamado_clase : ID .  (110)
	lista_de_id : ID .  (116)

	','  reduce 116
	';'  reduce 116
	'.'  reduce 110
	'='  reduce 110


state 56
	declaracion_variable : tipo lista_de_id . ','  (44)
	lista_de_id : lista_de_id . ';' ID  (115)

	','  shift 117
	';'  shift 118
	.  error


state 57
	llamado_clase : llamado_clase . '.' ID  (111)
	asignacion : tipo llamado_clase . '=' operacion ','  (114)

	'.'  shift 65
	'='  shift 119
	.  error


state 58
	bloque_sentencias : '{' . lista_sentencias '}'  (80)
	bloque_sentencias : '{' . '}'  (82)

	IF  shift 1
	PRINT  shift 2
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	DO  shift 8
	RETURN  shift 10
	TOD  shift 11
	ID  shift 12
	'}'  shift 120
	.  error

	sentencia  goto 121
	declaracion_variable  goto 22
	tipo  goto 24
	sentencia_expresion  goto 25
	sentencia_seleccion  goto 26
	sentencia_iteracion  goto 27
	sentencia_imprimir  goto 28
	sentencia_retorno  goto 29
	condicion_if  goto 30
	lista_sentencias  goto 122
	inicio_do  goto 31
	factor_inmediato  goto 32
	asignacion  goto 33
	llamado_clase  goto 34


state 59
	bloque_sentencias : '(' . lista_sentencias ')'  (81)
	bloque_sentencias : '(' . ')'  (83)

	IF  shift 1
	PRINT  shift 2
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	DO  shift 8
	RETURN  shift 10
	TOD  shift 11
	ID  shift 12
	')'  shift 123
	.  error

	sentencia  goto 121
	declaracion_variable  goto 22
	tipo  goto 24
	sentencia_expresion  goto 25
	sentencia_seleccion  goto 26
	sentencia_iteracion  goto 27
	sentencia_imprimir  goto 28
	sentencia_retorno  goto 29
	condicion_if  goto 30
	lista_sentencias  goto 124
	inicio_do  goto 31
	factor_inmediato  goto 32
	asignacion  goto 33
	llamado_clase  goto 34


state 60
	cuerpo_then : sentencia .  (76)

	.  reduce 76


state 61
	sentencia_seleccion : condicion_if cuerpo_then . END_IF ','  (68)
	sentencia_seleccion : condicion_if cuerpo_then . cuerpo_else END_IF ','  (69)
	sentencia_seleccion : condicion_if cuerpo_then . END_IF ';'  (70)
	sentencia_seleccion : condicion_if cuerpo_then . cuerpo_else END_IF ';'  (71)
	sentencia_seleccion : condicion_if cuerpo_then . ','  (72)
	sentencia_seleccion : condicion_if cuerpo_then . cuerpo_else ','  (73)

	ELSE  shift 125
	END_IF  shift 126
	','  shift 127
	.  error

	cuerpo_else  goto 128


state 62
	cuerpo_then : bloque_sentencias .  (77)

	.  reduce 77


state 63
	sentencia_iteracion : inicio_do bloque_sentencias . WHILE '(' comparacion ')' ','  (97)
	sentencia_iteracion : inicio_do bloque_sentencias . WHILE '(' comparacion ')' ';'  (98)
	sentencia_iteracion : inicio_do bloque_sentencias . WHILE '(' ')' ','  (99)

	WHILE  shift 129
	.  error


state 64
	sentencia_expresion : llamado_clase '(' . ')' ','  (104)
	sentencia_expresion : llamado_clase '(' . ')' ';'  (105)
	sentencia_expresion : llamado_clase '(' . operacion ')' ','  (106)
	sentencia_expresion : llamado_clase '(' . operacion ')' ';'  (107)

	ID  shift 69
	CTE_LONG  shift 70
	CTE_UINT  shift 71
	CTE_DOUBLE  shift 72
	')'  shift 130
	'-'  shift 80
	.  error

	operacion  goto 131
	factor_inmediato  goto 84
	llamado_clase  goto 85
	termino  goto 86
	factor  goto 87
	factor_comun  goto 88


state 65
	llamado_clase : llamado_clase '.' . ID  (111)

	ID  shift 132
	.  error


state 66
	asignacion : llamado_clase '=' . operacion ','  (112)
	asignacion : llamado_clase '=' . operacion ';'  (113)

	ID  shift 69
	CTE_LONG  shift 70
	CTE_UINT  shift 71
	CTE_DOUBLE  shift 72
	'-'  shift 80
	.  error

	operacion  goto 133
	factor_inmediato  goto 84
	llamado_clase  goto 85
	termino  goto 86
	factor  goto 87
	factor_comun  goto 88


state 67
	factor_inmediato : llamado_clase "--" .  (125)

	.  reduce 125


state 68
	comparador : error .  (96)

	.  reduce 96


state 69
	llamado_clase : ID .  (110)

	.  reduce 110


state 70
	factor_comun : CTE_LONG .  (130)

	.  reduce 130


state 71
	factor_comun : CTE_UINT .  (131)

	.  reduce 131


state 72
	factor_comun : CTE_DOUBLE .  (128)

	.  reduce 128


state 73
	condicion_if : IF '(' ')' .  (75)

	.  reduce 75


state 74
	comparador : '<' .  (90)

	.  reduce 90


state 75
	comparador : '>' .  (91)

	.  reduce 91


state 76
	comparador : "<=" .  (92)

	.  reduce 92


state 77
	comparador : ">=" .  (93)

	.  reduce 93


state 78
	comparador : "==" .  (94)

	.  reduce 94


state 79
	comparador : "!!" .  (95)

	.  reduce 95


state 80
	factor_comun : '-' . CTE_DOUBLE  (127)
	factor_comun : '-' . CTE_LONG  (129)
	factor_comun : '-' . CTE_UINT  (132)

	CTE_LONG  shift 134
	CTE_UINT  shift 135
	CTE_DOUBLE  shift 136
	.  error


state 81
	condicion_if : IF '(' comparacion . ')'  (74)

	')'  shift 137
	.  error


state 82
	comparacion : operacion . comparador operacion  (86)
	comparacion : operacion . comparador  (87)
	operacion : operacion . '+' termino  (118)
	operacion : operacion . '-' termino  (119)

	error  shift 68
	'<'  shift 74
	'>'  shift 75
	"<="  shift 76
	">="  shift 77
	"=="  shift 78
	"!!"  shift 79
	'+'  shift 138
	'-'  shift 139
	.  error

	comparador  goto 140


state 83
	comparacion : comparador . operacion  (88)
	comparacion : comparador .  (89)

	ID  shift 69
	CTE_LONG  shift 70
	CTE_UINT  shift 71
	CTE_DOUBLE  shift 72
	'-'  shift 80
	')'  reduce 89

	operacion  goto 141
	factor_inmediato  goto 84
	llamado_clase  goto 85
	termino  goto 86
	factor  goto 87
	factor_comun  goto 88


state 84
	factor : factor_inmediato .  (124)

	.  reduce 124


state 85
	llamado_clase : llamado_clase . '.' ID  (111)
	factor_inmediato : llamado_clase . "--"  (125)
	factor_comun : llamado_clase .  (126)

	'.'  shift 65
	"--"  shift 67
	error  reduce 126
	','  reduce 126
	';'  reduce 126
	')'  reduce 126
	'<'  reduce 126
	'>'  reduce 126
	"<="  reduce 126
	">="  reduce 126
	"=="  reduce 126
	"!!"  reduce 126
	'+'  reduce 126
	'-'  reduce 126
	'*'  reduce 126
	'/'  reduce 126


state 86
	operacion : termino .  (117)
	termino : termino . '*' factor  (121)
	termino : termino . '/' factor  (122)

	'*'  shift 142
	'/'  shift 143
	error  reduce 117
	','  reduce 117
	';'  reduce 117
	')'  reduce 117
	'<'  reduce 117
	'>'  reduce 117
	"<="  reduce 117
	">="  reduce 117
	"=="  reduce 117
	"!!"  reduce 117
	'+'  reduce 117
	'-'  reduce 117


state 87
	termino : factor .  (120)

	.  reduce 120


state 88
	factor : factor_comun .  (123)

	.  reduce 123


state 89
	sentencia_imprimir : PRINT CADENA ',' .  (66)

	.  reduce 66


state 90
	sentencia_imprimir : PRINT CADENA ';' .  (67)

	.  reduce 67


state 91
	sentencia_expresion : TOD '(' operacion . ')' ','  (108)
	sentencia_expresion : TOD '(' operacion . ')' ';'  (109)
	operacion : operacion . '+' termino  (118)
	operacion : operacion . '-' termino  (119)

	')'  shift 144
	'+'  shift 138
	'-'  shift 139
	.  error


state 92
	programa : '{' componentes_programa '}' .  (1)

	.  reduce 1


state 93
	declaracion_clase : encabezado_clase IMPLEMENT ID . bloque_clase ','  (12)
	declaracion_clase : encabezado_clase IMPLEMENT ID . bloque_clase ';'  (15)

	'{'  shift 48
	'('  shift 49
	.  error

	bloque_clase  goto 145


state 94
	tipo : ID .  (136)

	.  reduce 136


state 95
	bloque_clase : '{' '}' .  (22)

	.  reduce 22


state 96
	miembro_clase : declaracion_funcion .  (32)

	.  reduce 32


state 97
	bloque_clase : '{' cuerpo_clase . '}'  (19)
	bloque_clase : '{' cuerpo_clase . herencia_clase '}'  (20)
	cuerpo_clase : cuerpo_clase . miembro_clase  (30)

	VOID  shift 4
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	ID  shift 146
	'}'  shift 147
	.  error

	declaracion_funcion  goto 96
	herencia_clase  goto 148
	miembro_clase  goto 149
	declaracion_variable  goto 99
	encabezado_funcion  goto 23
	tipo  goto 100


state 98
	cuerpo_clase : miembro_clase .  (29)

	.  reduce 29


state 99
	miembro_clase : declaracion_variable .  (31)

	.  reduce 31


state 100
	declaracion_variable : tipo . lista_de_id ','  (44)

	ID  shift 150
	.  error

	lista_de_id  goto 56


state 101
	bloque_clase : '(' ')' .  (23)

	.  reduce 23


state 102
	bloque_clase : '(' cuerpo_clase . ')'  (21)
	cuerpo_clase : cuerpo_clase . miembro_clase  (30)

	VOID  shift 4
	LONG  shift 5
	UINT  shift 6
	DOUBLE  shift 7
	ID  shift 94
	')'  shift 151
	.  error

	declaracion_funcion  goto 96
	miembro_clase  goto 149
	declaracion_variable  goto 99
	encabezado_funcion  goto 23
	tipo  goto 100


state 103
	declaracion_clase : encabezado_clase bloque_clase ',' .  (11)

	.  reduce 11


state 104
	declaracion_clase : encabezado_clase bloque_clase ';' .  (14)

	.  reduce 14


state 105
	bloque_interfaz : '{' '}' .  (27)

	.  reduce 27


state 106
	cuerpo_interfaz : declaracion_funcion .  (35)

	.  reduce 35


state 107
	bloque_interfaz : '{' cuerpo_interfaz . '}'  (25)
	cuerpo_interfaz : cuerpo_interfaz . declaracion_funcion_interfaz  (34)
	cuerpo_interfaz : cuerpo_interfaz . declaracion_funcion  (36)

	VOID  shift 4
	'}'  shift 152
	.  error

	declaracion_funcion  goto 153
	declaracion_funcion_interfaz  goto 154
	encabezado_funcion  goto 109


state 108
	cuerpo_interfaz : declaracion_funcion_interfaz .  (33)

	.  reduce 33

